# napari-spatial-omics

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_spatial_omics/: __init__.py  _dock_widget_original.py  _function.py  _reader.py
src/napari_spatial_omics/_tests/: test_function.py  test_reader.py
