[metadata]
name = napari-spatial-omics
version = 0.0.7
author = Sebastian Gonzalez-Tirado
author_email = sebgoti8@gmail.com
url = https://github.com/sebgoti/napari-spatial-omics
license = BSD-3-Clause
description = A simple plugin to visualize spatial omic data stored in CSV format
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/sebgoti/napari-spatial-omics/issues
    Documentation = https://github.com/sebgoti/napari-spatial-omics#README.md
    Source Code = https://github.com/sebgoti/napari-spatial-omics
    User Support = https://github.com/sebgoti/napari-spatial-omics/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    pandas

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-spatial-omics = napari_spatial_omics
